<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_text_colour"
        android:textColor="#000000"
        android:textSize="26sp" />


    <RadioGroup
        android:id="@+id/radioColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/blue"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/red"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/green"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/radioBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/black"
            android:textSize="26sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/setSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_text_size"
        android:textColor="#000000"
        android:textSize="26sp" />

    <RadioGroup
        android:id="@+id/radioSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/small"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/medium"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/radioBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/big"
            android:textSize="26sp" />

    </RadioGroup>

    <Button
        android:id="@+id/setButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes"
        android:textSize="26sp" />


</LinearLayout>